// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Home unchanged 1`] = `
<div>
  <div
    class="relative flex min-h-screen flex-[1] flex-col items-center rounded-xl sm:m-auto sm:h-[37.5rem] sm:min-h-[unset] sm:max-w-[59rem] sm:flex-row sm:items-start sm:bg-white sm:p-4"
  >
    <ul
      class="flex h-44 w-full flex-row justify-center gap-x-[1.1rem] bg-[url('/images/bg-sidebar-mobile.svg')] bg-[length:100%_100%] bg-no-repeat pt-8 sm:h-full sm:max-w-[17.4rem] sm:flex-col sm:justify-normal sm:gap-y-8 sm:bg-[url('/images/bg-sidebar-desktop.svg')] sm:pl-8 sm:pt-10"
    >
      <li
        class="items-center sm:flex sm:gap-x-4"
      >
        <div
          class="bg-lightBlue text-marineBlue flex h-8 w-8 cursor-pointer items-center justify-center rounded-full border text-center font-bold transition-all"
        >
          1
        </div>
        <div
          class="hidden flex-col justify-center gap-y-1 sm:flex"
        >
          <div
            class="text-lightGray text-[0.8rem] uppercase leading-none "
          >
            Step 
            1
          </div>
          <div
            class="font-bold leading-none text-white uppercase"
          >
            personal info
          </div>
        </div>
      </li>
      <li
        class="items-center sm:flex sm:gap-x-4"
      >
        <div
          class="bg-transparent text-white flex h-8 w-8 cursor-pointer items-center justify-center rounded-full border text-center font-bold transition-all"
        >
          2
        </div>
        <div
          class="hidden flex-col justify-center gap-y-1 sm:flex"
        >
          <div
            class="text-lightGray text-[0.8rem] uppercase leading-none "
          >
            Step 
            2
          </div>
          <div
            class="font-bold leading-none text-white uppercase"
          >
            SELECT PLAN
          </div>
        </div>
      </li>
      <li
        class="items-center sm:flex sm:gap-x-4"
      >
        <div
          class="bg-transparent text-white flex h-8 w-8 cursor-pointer items-center justify-center rounded-full border text-center font-bold transition-all"
        >
          3
        </div>
        <div
          class="hidden flex-col justify-center gap-y-1 sm:flex"
        >
          <div
            class="text-lightGray text-[0.8rem] uppercase leading-none "
          >
            Step 
            3
          </div>
          <div
            class="font-bold leading-none text-white uppercase"
          >
            ADD-ONS
          </div>
        </div>
      </li>
      <li
        class="items-center sm:flex sm:gap-x-4"
      >
        <div
          class="bg-transparent text-white flex h-8 w-8 cursor-pointer items-center justify-center rounded-full border text-center font-bold transition-all"
        >
          4
        </div>
        <div
          class="hidden flex-col justify-center gap-y-1 sm:flex"
        >
          <div
            class="text-lightGray text-[0.8rem] uppercase leading-none "
          >
            Step 
            4
          </div>
          <div
            class="font-bold leading-none text-white uppercase"
          >
            SUMMARY
          </div>
        </div>
      </li>
    </ul>
    <div
      class="relative top-[-5rem] px-4 sm:static sm:h-full sm:w-full sm:p-0"
    />
  </div>
</div>
`;

exports[`renders Steps unchanged 1`] = `
<div>
  <div
    class="relative flex min-h-screen flex-[1] flex-col items-center rounded-xl sm:m-auto sm:h-[37.5rem] sm:min-h-[unset] sm:max-w-[59rem] sm:flex-row sm:items-start sm:bg-white sm:p-4"
  >
    <ul
      class="flex h-44 w-full flex-row justify-center gap-x-[1.1rem] bg-[url('/images/bg-sidebar-mobile.svg')] bg-[length:100%_100%] bg-no-repeat pt-8 sm:h-full sm:max-w-[17.4rem] sm:flex-col sm:justify-normal sm:gap-y-8 sm:bg-[url('/images/bg-sidebar-desktop.svg')] sm:pl-8 sm:pt-10"
    >
      <li
        class="items-center sm:flex sm:gap-x-4"
      >
        <div
          class="bg-lightBlue text-marineBlue flex h-8 w-8 cursor-pointer items-center justify-center rounded-full border text-center font-bold transition-all"
        >
          1
        </div>
        <div
          class="hidden flex-col justify-center gap-y-1 sm:flex"
        >
          <div
            class="text-[0.8rem] uppercase leading-none text-lightGray "
          >
            Step 
            1
          </div>
          <div
            class="font-bold uppercase leading-none text-white"
          >
            personal info
          </div>
        </div>
      </li>
      <li
        class="items-center sm:flex sm:gap-x-4"
      >
        <div
          class="bg-transparent text-white flex h-8 w-8 cursor-pointer items-center justify-center rounded-full border text-center font-bold transition-all"
        >
          2
        </div>
        <div
          class="hidden flex-col justify-center gap-y-1 sm:flex"
        >
          <div
            class="text-[0.8rem] uppercase leading-none text-lightGray "
          >
            Step 
            2
          </div>
          <div
            class="font-bold uppercase leading-none text-white"
          >
            select plan
          </div>
        </div>
      </li>
      <li
        class="items-center sm:flex sm:gap-x-4"
      >
        <div
          class="bg-transparent text-white flex h-8 w-8 cursor-pointer items-center justify-center rounded-full border text-center font-bold transition-all"
        >
          3
        </div>
        <div
          class="hidden flex-col justify-center gap-y-1 sm:flex"
        >
          <div
            class="text-[0.8rem] uppercase leading-none text-lightGray "
          >
            Step 
            3
          </div>
          <div
            class="font-bold uppercase leading-none text-white"
          >
            add-ons
          </div>
        </div>
      </li>
      <li
        class="items-center sm:flex sm:gap-x-4"
      >
        <div
          class="bg-transparent text-white flex h-8 w-8 cursor-pointer items-center justify-center rounded-full border text-center font-bold transition-all"
        >
          4
        </div>
        <div
          class="hidden flex-col justify-center gap-y-1 sm:flex"
        >
          <div
            class="text-[0.8rem] uppercase leading-none text-lightGray "
          >
            Step 
            4
          </div>
          <div
            class="font-bold uppercase leading-none text-white"
          >
            summary
          </div>
        </div>
      </li>
    </ul>
    <div
      class="relative top-[-5rem] px-4 sm:static sm:h-full sm:w-full sm:p-0"
    >
      <div
        class="step sm:relative sm:h-full"
      >
        <h1
          class="mb-2 text-[1.55rem] capitalize sm:mb-[0.9rem] sm:text-[2.05rem]"
        >
          personal info
        </h1>
        <p
          class="text-coolGray mb-4 text-[1.03rem] font-medium tracking-[-.01em] sm:mb-8 sm:tracking-tight"
        >
          Please provide your name, email address, and phone number.
        </p>
      </div>
    </div>
  </div>
</div>
`;
